src/test/ui/seq-args.stderr
error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/seq-args.rs:4:13
   |
LL | impl<T> Seq<T> for Vec<T> {
   |             ^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/seq-args.rs:7:10
   |
LL | impl Seq<bool> for u32 {
   |          ^^^^ unexpected type argument

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
